--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -19,6 +19,9 @@ jobs:
     - id: check-version
       name: Check release version
       uses: hashibuto/github-actions/version-check@version-check_v0
+      with:
+        filename: pyproject.toml
+        expression: "version = \"(.*)\""
 
     - name: login to docker hub
       uses: hashibuto/github-actions/docker-login@docker-login_v0
