--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -20,7 +20,7 @@ jobs:
       name: Check release version
       uses: hashibuto/github-actions/version-check@version-check_v0
       with:
-        filename: pyproject.toml
+        filename: ./pyproject.toml
         expression: "version = \"(.*)\""
 
     - name: login to docker hub
