--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -28,8 +28,8 @@ jobs:
       uses: hashibuto/github-actions/docker-login@docker-login_v0
       with:
         registry: docker
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
+        username: "${{ secrets.DOCKER_USERNAME }}"
+        password: "${{ secrets.DOCKER_PASSWORD }}"
 
     - name: login to poetry
       uses: hashibuto/github-actions/docker-login@poetry-login_v0
