--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -36,8 +36,10 @@ jobs:
         password: ${{ secrets.PYPI_PASSWORD }}
 
     - name: login to docker hub
-      uses: hashibuto/github-actions/docker-login@docker-login_v0
+      uses: docker/login-action@v2
       with:
-        registry: docker
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
+
+    - name: build python release
+      run: poetry build
