--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -13,8 +13,9 @@ jobs:
     name: build and release
     runs-on: ubuntu-22.04
     steps:
-    - name: checkout repo
-      uses: actions/checkout@v3
+    - uses: actions/checkout@v4
+      with:
+        fetch-depth: 0
 
     - id: check-changes
       uses: hashibuto/github-actions/changes-check@changes-check_v0
