--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -11,8 +11,6 @@ on:
 jobs:
   push_to_registry:
     name: build and release
-    outputs:
-      is-merged: ${{ steps.check-changes.outputs.is-merged }}
     runs-on: ubuntu-22.04
     steps:
     - uses: actions/checkout@v4
@@ -53,12 +51,12 @@ jobs:
       run: poetry build
 
     - name: publish python release
-      if: ${{ needs.push_to_registry.outputs.is-merged == 'true' }}
+      if: ${{ steps.check-changes.outputs.is-merged == 'true' }}
       run: poetry publish --repository pubreg
 
     - id: tag-release-version
       name: Tag release version
-      if: ${{ needs.push_to_registry.outputs.is-merged == 'true' }}
+      if: ${{ steps.check-changes.outputs.is-merged == 'true' }}
       uses: hashibuto/github-actions/version-check@version-check_v0
       with:
         filename: pyproject.toml
@@ -67,7 +65,7 @@ jobs:
         create-major-release-tag: false
 
     - name: Update compare tag
-      if: ${{ needs.push_to_registry.outputs.is-merged == 'true' }}
+      if: ${{ steps.check-changes.outputs.is-merged == 'true' }}
       uses: actions/github-script@v7
       with:
         script: |
